--- a/web/index.html
+++ b/web/index.html
@@ -22,10 +22,7 @@
 
     <!-- iOS meta tags & icons -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="vitify" />
     <link rel="apple-touch-icon" href="icons/vitify-192.png" />
 
